--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,6 @@ body {
 }
 
 .jumbotron {
-    background-image: url("../images/nasa.jpeg");
-    background-size: 100% 100%;
+    color: #121212;
     text-align: center;
 }
