--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,3 +9,11 @@ body {
     background-color: #323232;
     text-align: center;
 }
+
+.panel {
+    background-color: #323232;
+}
+
+.well {
+    background-color: #323232;
+}
