--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 body {
     color: #f7f7f7;
-    background-color: #151515;
+    background-image: url("../images/bacteria-header.jpeg");
 }
 
 select {
