--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,7 @@ select {
 .jumbotron {
     background-color: #222222;
     text-align: center;
-    background-image: url("../images/bacteria-header.jpeg");
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../images/bacteria-header.jpeg");
 }
 
 .panel {
